...
    <RelativeLayout
        android:id="@+id/main_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="top|left"
            android:onClick="onClickBack"
            android:text="Back"
            android:textStyle="bold"
            android:textColor="#fff"
            android:alpha="0.7"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_logout"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="top|right"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onClickLogout"
...
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:alpha="2"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="USER NAME"
                android:textColor="@color/white"
...
                        android:text="Total"
                        android:textColor="#373636"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="125"
                        android:textColor="@color/uscRed"
...
                        android:text="Upcoming"
                        android:textColor="#373636"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="100"
                        android:textColor="@color/uscRed"
...
                        android:text="History"
                        android:textColor="#373636"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="25"
                        android:textColor="@color/uscRed"
...
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_baseline_person_24"
                    app:tint="@color/uscRed" />

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="Wiliam@gmail.com"
                    android:textStyle="bold" />
...
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@android:drawable/ic_dialog_email"
                    app:tint="@color/uscRed" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="+266 225 225"
                    android:textStyle="bold" />
...
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/school1024"
                    app:tint="@color/uscRed" />

                <TextView
                    android:id="@+id/profile_uscid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="Add to group"
                    android:textStyle="bold" />
...
