<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.uscrecapp_team28.Activity.BookingInformationActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/returnButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:onClick="onClickReturn"
        android:text="Back"
        android:textStyle="bold"
        android:textColor="#fff"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/bookinginfotitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/uscRed"
        android:text="Booking Information"
        android:background="@color/uscYellow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/uscRed"
        android:text="Upcoming"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="4dp"
        android:scrollbars="vertical" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/uscRed"
        android:text="History"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/HistoryrecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="4dp"
        android:scrollbars="vertical" />
</LinearLayout>